--- a/src/main/webapp/layout/tab/tab1.html
+++ b/src/main/webapp/layout/tab/tab1.html
@@ -1,6 +1,6 @@
 <div class="box total_state selected">
     <div class="total_top">
-        <div class="total_name">实验室状态</div>
+        <div class="total_name">运营状态</div>
         <div class="total_top_1">
             <div class="echarts_title">设施状态</div>
             <div id="myChart1"></div>
@@ -245,7 +245,8 @@
 
             </div>
             <div class="total_bottom_bar2">
-
+                <h3><span class="white" id="tab1_jiance_xh_name2">"型号Ａ产品"</span> CpK分析</h3>
+                <p class="result" id="tab1_jiance_xh_result2">过程能力充足</p>
                 <div id="myChart10"></div>
             </div>
 
