--- a/src/main/webapp/layout/tab/tab3.html
+++ b/src/main/webapp/layout/tab/tab3.html
@@ -135,7 +135,7 @@
                         <!--class="up_num" id="order_year_rate_up_2017">0.05%</span></li>-->
                         <!--</ul>-->
                         <!--<ul>-->
-                        <div class="myChart46_name">各产线近12月订单及时率情况</div>
+                        <div class="myChart46_name">订单及时率趋势变化</div>
                         <div id="myChart46"></div>
                         <!--</ul>-->
                     </div>
@@ -143,7 +143,7 @@
             </ul>
         </div>
         <div class="shuju_result_bottom_right">
-            <div class="shuju_title1">检测满意度</div>
+            <div class="shuju_title1">用户满意度</div>
             <div class="jiance_left">
                 <ul>
                     <li class="order_left">
@@ -177,7 +177,7 @@
                 </ul>
             </div>
             <div class="jiance_right">
-                <div class="jiance_right_name">检测满意度趋势变化</div>
+                <div class="jiance_right_name">用户满意度趋势变化</div>
                 <div id="myChart49"></div>
             </div>
         </div>
