--- a/src/main/webapp/layout/tab/tab1.html
+++ b/src/main/webapp/layout/tab/tab1.html
@@ -150,7 +150,7 @@
             <div class="echarts_title">问题闭环率</div>
             <div class="echarts_title_left">
                 <ul>
-                    <li>当年问题闭环率为<span>98.5%</span></li>
+                    <li>当年问题闭环率<span>98.5%</span></li>
                     <li style="display: inline-block">同比上升</li>
                     <span>2.3%</span>
                 </ul>
