--- a/src/main/webapp/layout/tab/tab2.html
+++ b/src/main/webapp/layout/tab/tab2.html
@@ -8,18 +8,13 @@
                     <div class="zaixian">
                         <ul>
                             <li>实验室在线率</li>
-                            <li class="sheshi_num">96% <span><img src="${contextPath!}/static/img/sheshiState/rise.png"
+                            <li class="sheshi_num" id="tab2_equipment_top_0"><!-- 96% <span><img src="${contextPath!}/static/img/sheshiState/rise.png"
                                                                   alt=""></span><span
-                                    class="up_num">0.05%</span></li>
+                                    class="up_num">0.05%</span> --></li>
                         </ul>
                         <ul>
-                            <table>
-                                <!--<tr>-->
-                                    <!--<th></th>-->
-                                    <!--<th>产线在线率</th>-->
-                                    <!--<th>同比</th>-->
-                                <!--</tr>-->
-                                <tr>
+                            <table id="tab2_equipment_table_0">
+                               <!--  <tr>
                                     <td>冰冷</td>
                                     <td>
                                         <div class="progress">
@@ -116,7 +111,7 @@
                                     </td>
                                     <td><span><img src="${contextPath!}/static/img/sheshiState/rise.png"
                                                    alt=""></span><span>1%</span></td>
-                                </tr>
+                                </tr> -->
                             </table>
                         </ul>
                     </div>
@@ -125,18 +120,18 @@
                     <div class="zaixian">
                         <ul>
                             <li>设备完好率</li>
-                            <li class="sheshi_num">96% <span><img src="${contextPath!}/static/img/sheshiState/rise.png"
+                            <li class="sheshi_num" id="tab2_equipment_top_1"><!-- 96% <span><img src="${contextPath!}/static/img/sheshiState/rise.png"
                                                                   alt=""></span><span
-                                    class="up_num">0.05%</span></li>
+                                    class="up_num">0.05%</span> --></li>
                         </ul>
                         <ul>
-                            <table>
+                            <table id="tab2_equipment_table_1">
                                 <!--<tr>-->
                                     <!--<th></th>-->
                                     <!--<th>产线在线率</th>-->
                                     <!--<th>同比</th>-->
                                 <!--</tr>-->
-                                <tr>
+                                <!-- <tr>
                                     <td></td>
                                     <td>
                                         <div class="progress">
@@ -233,7 +228,7 @@
                                     </td>
                                     <td><span><img src="${contextPath!}/static/img/sheshiState/rise.png"
                                                    alt=""></span><span>1%</span></td>
-                                </tr>
+                                </tr> -->
                             </table>
                         </ul>
                     </div>
@@ -242,18 +237,18 @@
                     <div class="zaixian">
                         <ul>
                             <li>设备利用率</li>
-                            <li class="sheshi_num">96% <span><img src="${contextPath!}/static/img/sheshiState/rise.png"
+                            <li class="sheshi_num" id="tab2_equipment_top_2"><!-- 96% <span><img src="${contextPath!}/static/img/sheshiState/rise.png"
                                                                   alt=""></span><span
-                                    class="up_num">0.05%</span></li>
+                                    class="up_num">0.05%</span> --></li>
                         </ul>
                         <ul>
-                            <table>
+                            <table id="tab2_equipment_table_2">
                                 <!--<tr>-->
                                     <!--<th></th>-->
                                     <!--<th>产线在线率</th>-->
                                     <!--<th>同比</th>-->
                                 <!--</tr>-->
-                                <tr>
+                               <!--  <tr>
                                     <td></td>
                                     <td>
                                         <div class="progress">
@@ -350,7 +345,7 @@
                                     </td>
                                     <td><span><img src="${contextPath!}/static/img/sheshiState/rise.png"
                                                    alt=""></span><span>1%</span></td>
-                                </tr>
+                                </tr> -->
                             </table>
                         </ul>
                     </div>
