--- a/src/main/webapp/layout/tab/tab3.html
+++ b/src/main/webapp/layout/tab/tab3.html
@@ -7,9 +7,9 @@
                     <div class="order_all">
                         <ul>
                             <li>整机订单总数</li>
-                            <li class="sheshi_num">96% <span><img src="${contextPath!}/static/img/sheshiState/rise.png"
+                            <li class="sheshi_num"><span id="tab3_zj_order_type"></span><span><img src="${contextPath!}/static/img/sheshiState/rise.png"
                                                                   alt=""></span><span
-                                    class="up_num">0.05%</span></li>
+                                    class="up_num" id="tab3_zj_order_up"></span></li>
                         </ul>
                         <ul>
                             <div id="myChart39"></div>
@@ -20,9 +20,9 @@
                     <div class="order_all">
                         <ul>
                             <li>模块订单总数</li>
-                            <li class="sheshi_num">96% <span><img src="${contextPath!}/static/img/sheshiState/rise.png"
+                            <li class="sheshi_num"><span id="tab3_mk_order_type"></span><span><img src="${contextPath!}/static/img/sheshiState/rise.png"
                                                                   alt=""></span><span
-                                    class="up_num">0.05%</span></li>
+                                    class="up_num" id="tab3_mk_order_up"></span></li>
                         </ul>
                         <ul>
                             <div id="myChart40"></div>
@@ -42,7 +42,7 @@
                                 <spn id="once_pass_rate_zj"></spn>
                                 <span><img src="${contextPath!}/static/img/sheshiState/rise.png"
                                            alt=""></span><span
-                                    class="up_num">3.25%</span></li>
+                                    class="up_num" id="once_pass_rate_zj_rise"></span></li>
                         </ul>
                         <ul>
                             <div id="myChart41"></div>
@@ -56,7 +56,7 @@
                             <li class="sheshi_num"><span id="once_pass_rate_mk"></span> <span><img
                                     src="${contextPath!}/static/img/sheshiState/rise.png"
                                     alt=""></span><span
-                                    class="up_num">2.35%</span></li>
+                                    class="up_num" id="once_pass_rate_mk_rise"></span></li>
                         </ul>
                         <ul>
                             <div id="myChart42"></div>
@@ -72,9 +72,7 @@
                     <div class="order_all">
                         <ul>
                             <li>整机</li>
-                            <li class="sheshi_num">96% <span><img src="${contextPath!}/static/img/sheshiState/rise.png"
-                                                                  alt=""></span><span
-                                    class="up_num">0.05%</span></li>
+                            <li class="sheshi_num" id="tab3_question_closed_zj"></li>
                         </ul>
                         <ul>
                             <div id="myChart43"></div>
@@ -86,9 +84,7 @@
                     <div class="order_all">
                         <ul>
                             <li>模块</li>
-                            <li class="sheshi_num">96% <span><img src="${contextPath!}/static/img/sheshiState/rise.png"
-                                                                  alt=""></span><span
-                                    class="up_num">0.05%</span></li>
+                            <li class="sheshi_num" id="tab3_question_closed_mk"></li>
                         </ul>
                         <ul>
                             <div id="myChart44"></div>
@@ -108,10 +104,10 @@
                         <div class="order_all_name">
                             <ul>
                                 <li>2016年及时率</li>
-                                <li class="sheshi_num"><span id="order_year_rate_2016">96%</span> <span><img
+                                <li class="sheshi_num"><span id="order_year_rate_2016"></span> <span><img
                                         src="${contextPath!}/static/img/sheshiState/rise.png"
                                         alt=""></span><span
-                                        class="up_num" id="order_year_rate_up_2016">0.08%</span></li>
+                                        class="up_num" id="order_year_rate_up_2016"></span></li>
                             </ul>
                             <ul>
                                 <li>2017年及时率</li>
@@ -150,10 +146,7 @@
                         <div class="order_all">
                             <ul>
                                 <li>2016年满意度</li>
-                                <li class="sheshi_num">96% <span><img
-                                        src="${contextPath!}/static/img/sheshiState/rise.png"
-                                        alt=""></span><span
-                                        class="up_num">0.05%</span></li>
+                                <li class="sheshi_num" id="tab3_user_my_hb"></li>
                             </ul>
                             <ul>
                                 <div id="myChart47"></div>
@@ -164,10 +157,7 @@
                         <div class="order_all">
                             <ul>
                                 <li>2017年满意度</li>
-                                <li class="sheshi_num">96% <span><img
-                                        src="${contextPath!}/static/img/sheshiState/rise.png"
-                                        alt=""></span><span
-                                        class="up_num">0.05%</span></li>
+                                <li class="sheshi_num" id="tab3_user_my_tq"></li>
                             </ul>
                             <ul>
                                 <div id="myChart48"></div>
