--- a/src/main/webapp/layout/centerLab.html
+++ b/src/main/webapp/layout/centerLab.html
@@ -470,9 +470,9 @@
                         <div class="la_datal_content clearfloat">
                             <div class="la_datal_legend">
                                 <ul>
-                                    <li>平均:95%</li>
-                                    <li>最高:100% (5月)</li>
-                                    <li>最低:85% (7月)</li>
+                                     <li id="satisfaction_rate_center_lab_pj"></li>
+                                    <li id="satisfaction_rate_center_lab_height"></li>
+                                    <li id="satisfaction_rate_center_lab_low"></li>
                                 </ul>
                             </div>
                             <div class="la_data_left_data">
@@ -684,5 +684,7 @@
         initThree();
         //近12个月订单及时率趋势图
         initfour();
+        //近12个月用户满意度趋势图
+        inittwo();
     })
 </script>
