--- a/src/main/webapp/layout/tab/tab4.html
+++ b/src/main/webapp/layout/tab/tab4.html
@@ -1,29 +1,41 @@
-<div class="box shuju_apply">
+<div class="box shuju_apply tab4">
     <div class="shuju_apply_top">
         <!--14-19-->
-        <div class="shuju_apply_bottom_left">
+        <div class="total_bottom_left">
             <div class="echarts_title echarts_title2">量产一致性保障</div>
             <div class="shuju_apply_bottom_pie">
                 <div id="myChart14"></div>
             </div>
-            <div class="shuju_apply_bottom_tab">
+            <div class="total_bottom_tab">
                 <ul>
-                    <li>模块商1</li>
-                    <li>模块商1</li>
-                    <li>模块商1</li>
-                    <li>模块商1</li>
-                    <li>模块商1</li>
-                    <li>模块商1</li>
-                    <li>模块商1</li>
-                    <li>模块商1</li>
+                   ##for(p in providerDic){
+                		<li class="main main${p.id!}">${p.name!}</li>
+                		<li>
+	                		<ul>
+		                		##for(c in p.children){
+		                			##if(pLP.first&&cLP.first){
+			                			<li class="main${p.id}-sub active" data="${c.id}" onclick="loadTab4JianData('${c.id}','${c.name}')">${c.name}</li>
+			                		##}else{
+			                			<li class="main${p.id}-sub" data="${c.id}" onclick="loadTab4JianData('${c.id}','${c.name}')">${c.name}</li>
+			                		##}
+		                		##}
+	                		 </ul>
+                		 </li>
+                	##}
                 </ul>
 
             </div>
-            <div class="shuju_apply_bottom_bar1">
+             <div class="total_bottom_bar1">
                 <!--<div class="echarts_title echarts_title1">量产一致性对比分析</div>-->
+                <h3><span class="white" id="tab4_jiance_xh_name"></span> SPC分析</h3>
+                <p class="result" id="tab4_jiance_xh_result"></p>
                 <div id="myChart15"></div>
+                <div id="myChart15_2"></div>
+
             </div>
-            <div class="shuju_apply_bottom_bar2">
+            <div class="total_bottom_bar2">
+                <h3><span class="white" id="tab4_jiance_xh_name2"></span> CpK分析</h3>
+                <p class="result" id="tab4_jiance_xh_result2"></p>
                 <div id="myChart16"></div>
             </div>
 
