修改局部样式，tab4

--- a/src/main/webapp/layout/tab/tab4.html
+++ b/src/main/webapp/layout/tab/tab4.html
@@ -4,6 +4,8 @@
         <div class="total_bottom_left">
             <div class="echarts_title echarts_title2">量产一致性保障</div>
             <div class="shuju_apply_bottom_pie">
+                <h3>模块商质量水平分布</h3>
+                <div class="rename-ppm">ppm</div>
                 <div id="myChart14"></div>
             </div>
             <div class="total_bottom_tab">
