--- a/src/main/webapp/layout/tab/tab4.html
+++ b/src/main/webapp/layout/tab/tab4.html
@@ -39,6 +39,16 @@
                 <h3><span class="white" id="tab4_jiance_xh_name2"></span> CpK分析</h3>
                 <p class="result" id="tab4_jiance_xh_result2"></p>
                 <div id="myChart16"></div>
+<!--
+                <div>111</div>
+                <div>111</div>
+                <div>111</div>
+                <div>111</div>
+                <div>111</div>
+                <div>111</div>
+                <div>111</div>
+                <div>111</div>
+-->
             </div>
 
         </div>
