右上角tab切换

--- a/src/main/webapp/layout/tab/tab1.html
+++ b/src/main/webapp/layout/tab/tab1.html
@@ -168,7 +168,7 @@
     <div class="total_bottom">
         <div class="total_name">数据应用</div>
         <div class="total_bottom_left tab1">
-            <div class="echarts_title echarts_title2">量产一致性保障</div>
+            <div class="echarts_title echarts_title2">模块商过程能力分析</div>
             <div class="total_bottom_pie">
                 <h3>模块商质量水平分布</h3>
                 <div class="rename-ppm">ppm</div>
