--- a/src/main/webapp/layout/right.html
+++ b/src/main/webapp/layout/right.html
@@ -69,7 +69,7 @@
             $(this).addClass("word_active").siblings().removeClass("word_active");
         	resetSizeRight();
         });
-       // labTypeCode="模块商实验室";
+        labTypeCode="模块商实验室";
         loadTab1Data();
         loadTab2Data();
         loadTab3Data();
