实验室类型切换

--- a/src/main/webapp/layout/tab/tab3.html
+++ b/src/main/webapp/layout/tab/tab3.html
@@ -7,9 +7,7 @@
                     <div class="order_all">
                         <ul>
                             <li>整机订单总数</li>
-                            <li class="sheshi_num"><span id="tab3_zj_order_type"></span><span><img src="${contextPath!}/static/img/sheshiState/rise.png"
-                                                                  alt=""></span><span
-                                    class="up_num" id="tab3_zj_order_up"></span></li>
+                            <li class="sheshi_num" id="tab3_zj_order_type"></li>
                         </ul>
                         <ul>
                             <div id="myChart39"></div>
@@ -20,9 +18,7 @@
                     <div class="order_all">
                         <ul>
                             <li>模块订单总数</li>
-                            <li class="sheshi_num"><span id="tab3_mk_order_type"></span><span><img src="${contextPath!}/static/img/sheshiState/rise.png"
-                                                                  alt=""></span><span
-                                    class="up_num" id="tab3_mk_order_up"></span></li>
+                            <li class="sheshi_num" id="tab3_mk_order_type"></li>
                         </ul>
                         <ul>
                             <div id="myChart40"></div>
@@ -38,11 +34,7 @@
                     <div class="order_all">
                         <ul>
                             <li>整机</li>
-                            <li class="sheshi_num">
-                                <spn id="once_pass_rate_zj"></spn>
-                                <span><img src="${contextPath!}/static/img/sheshiState/rise.png"
-                                           alt=""></span><span
-                                    class="up_num" id="once_pass_rate_zj_rise"></span></li>
+                            <li class="sheshi_num" id="once_pass_rate_zj"></li>
                         </ul>
                         <ul>
                             <div id="myChart41"></div>
@@ -53,10 +45,7 @@
                     <div class="order_all">
                         <ul>
                             <li>模块</li>
-                            <li class="sheshi_num"><span id="once_pass_rate_mk"></span> <span><img
-                                    src="${contextPath!}/static/img/sheshiState/rise.png"
-                                    alt=""></span><span
-                                    class="up_num" id="once_pass_rate_mk_rise"></span></li>
+                            <li class="sheshi_num" id="once_pass_rate_mk"></li>
                         </ul>
                         <ul>
                             <div id="myChart42"></div>
@@ -104,17 +93,11 @@
                         <div class="order_all_name">
                             <ul>
                                 <li>2016年及时率</li>
-                                <li class="sheshi_num"><span id="order_year_rate_2016"></span> <span><img
-                                        src="${contextPath!}/static/img/sheshiState/rise.png"
-                                        alt=""></span><span
-                                        class="up_num" id="order_year_rate_up_2016"></span></li>
+                                <li class="sheshi_num" id="order_year_rate_2016"></li>
                             </ul>
                             <ul>
                                 <li>2017年及时率</li>
-                                <li class="sheshi_num"><span id="order_year_rate_2017">96% </span><span><img
-                                        src="${contextPath!}/static/img/sheshiState/rise.png"
-                                        alt=""></span><span
-                                        class="up_num" id="order_year_rate_up_2017">0.05%</span></li>
+                                <li class="sheshi_num"  id="order_year_rate_2017"></li>
                             </ul>
                         </div>
 
