--- a/src/main/webapp/layout/centerLab.html
+++ b/src/main/webapp/layout/centerLab.html
@@ -98,6 +98,7 @@
                             <span class="data">85%</span>
                         </div>
                     </div>
+
                     <div class="l-top-body">
                         <div class="l-top-body-1">
                             <h4>A室</h4>
@@ -111,7 +112,7 @@
                                     <div class="progress-bar" role="progressbar" aria-valuenow="84" aria-valuemin="0"
                                          aria-valuemax="100" style="width: 84%;height: 100%"></div>
                                 </div>
-                                <span class="data">84%</span>
+                                <span class="data">80/90</span>
                             </div>
                             <div class="item3">
                                 <h5>月负荷率：<span></span></h5>
@@ -119,7 +120,7 @@
                                     <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
                                          aria-valuemax="100" style="width: 80%;height: 100%"></div>
                                 </div>
-                                <span class="data">80%</span>
+                                <span class="data">80/90</span>
                             </div>
                         </div>
                         <div class="l-top-body-2">
@@ -134,7 +135,7 @@
                                     <div class="progress-bar" role="progressbar" aria-valuenow="84" aria-valuemin="0"
                                          aria-valuemax="100" style="width: 84%;height: 100%"></div>
                                 </div>
-                                <span class="data">84%</span>
+                                <span class="data">80/90</span>
                             </div>
                             <div class="item3">
                                 <h5>月负荷率：<span></span></h5>
@@ -142,7 +143,7 @@
                                     <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
                                          aria-valuemax="100" style="width: 80%;height: 100%"></div>
                                 </div>
-                                <span class="data">80%</span>
+                                <span class="data">80/90</span>
                             </div>
                         </div>
                         <div class="l-top-body-3">
@@ -157,7 +158,7 @@
                                     <div class="progress-bar" role="progressbar" aria-valuenow="84" aria-valuemin="0"
                                          aria-valuemax="100" style="width: 84%;height: 100%"></div>
                                 </div>
-                                <span class="data">84%</span>
+                                <span class="data">80/90</span>
                             </div>
                             <div class="item3">
                                 <h5>月负荷率：<span></span></h5>
@@ -165,7 +166,7 @@
                                     <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
                                          aria-valuemax="100" style="width: 80%;height: 100%"></div>
                                 </div>
-                                <span class="data">80%</span>
+                                <span class="data">80/90</span>
                             </div>
                         </div>
                         <div class="l-top-body-4">
@@ -180,7 +181,7 @@
                                     <div class="progress-bar" role="progressbar" aria-valuenow="84" aria-valuemin="0"
                                          aria-valuemax="100" style="width: 84%;height: 100%"></div>
                                 </div>
-                                <span class="data">84%</span>
+                                <span class="data">80/90</span>
                             </div>
                             <div class="item3">
                                 <h5>月负荷率：<span></span></h5>
@@ -188,7 +189,7 @@
                                     <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
                                          aria-valuemax="100" style="width: 80%;height: 100%"></div>
                                 </div>
-                                <span class="data">80%</span>
+                                <span class="data">80/90</span>
                             </div>
                         </div>
                         <div class="l-top-body-5">
@@ -203,7 +204,7 @@
                                     <div class="progress-bar" role="progressbar" aria-valuenow="84" aria-valuemin="0"
                                          aria-valuemax="100" style="width: 84%;height: 100%"></div>
                                 </div>
-                                <span class="data">84%</span>
+                                <span class="data">80/90</span>
                             </div>
                             <div class="item3">
                                 <h5>月负荷率：<span></span></h5>
@@ -211,7 +212,7 @@
                                     <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
                                          aria-valuemax="100" style="width: 80%;height: 100%"></div>
                                 </div>
-                                <span class="data">80%</span>
+                                <span class="data">80/90</span>
                             </div>
                         </div>
                     </div>
@@ -246,6 +247,10 @@
                     <div class="l-mid-body">
                         <div class="l-mid-body-1">
                             <h4>A室</h4>
+                            <div class="item4">
+                                <h5>设备数：<span></span></h5>
+                                <span class="data">12</span>
+                            </div>
                             <div class="item1">
                                 <h5>停机时间：<span></span></h5>
                                 <span class="data">12小时</span>
@@ -265,6 +270,10 @@
                         </div>
                         <div class="l-mid-body-2">
                             <h4>A室</h4>
+                            <div class="item4">
+                                <h5>设备数：<span></span></h5>
+                                <span class="data">12</span>
+                            </div>
                             <div class="item1">
                                 <h5>停机时间：<span></span></h5>
                                 <span class="data">12小时</span>
@@ -284,6 +293,10 @@
                         </div>
                         <div class="l-mid-body-3">
                             <h4>A室</h4>
+                            <div class="item4">
+                                <h5>设备数：<span></span></h5>
+                                <span class="data">12</span>
+                            </div>
                             <div class="item1">
                                 <h5>停机时间：<span></span></h5>
                                 <span class="data">12小时</span>
@@ -303,6 +316,10 @@
                         </div>
                         <div class="l-mid-body-4">
                             <h4>A室</h4>
+                            <div class="item4">
+                                <h5>设备数：<span></span></h5>
+                                <span class="data">12</span>
+                            </div>
                             <div class="item1">
                                 <h5>停机时间：<span></span></h5>
                                 <span class="data">12小时</span>
@@ -322,6 +339,10 @@
                         </div>
                         <div class="l-mid-body-5">
                             <h4>A室</h4>
+                            <div class="item4">
+                                <h5>设备数：<span></span></h5>
+                                <span class="data">12</span>
+                            </div>
                             <div class="item1">
                                 <h5>停机时间：<span></span></h5>
                                 <span class="data">12小时</span>
@@ -393,6 +414,36 @@
                             </div>
                         </div>
                         <div class="l-bottom-body-3">
+                            <h4>A室</h4>
+                            <div class="item1">
+                                <h5>已测订单数：<span></span></h5>
+                                <span class="data"><strong>412</strong></span>
+                            </div>
+                            <div class="item1">
+                                <h5>在测订单数：<span></span></h5>
+                                <span class="data"><strong>284</strong></span>
+                            </div>
+                            <div class="item1">
+                                <h5>待测订单数：<span></span></h5>
+                                <span class="data"><strong>437</strong></span>
+                            </div>
+                        </div>
+                        <div class="l-bottom-body-4">
+                            <h4>A室</h4>
+                            <div class="item1">
+                                <h5>已测订单数：<span></span></h5>
+                                <span class="data"><strong>412</strong></span>
+                            </div>
+                            <div class="item1">
+                                <h5>在测订单数：<span></span></h5>
+                                <span class="data"><strong>284</strong></span>
+                            </div>
+                            <div class="item1">
+                                <h5>待测订单数：<span></span></h5>
+                                <span class="data"><strong>437</strong></span>
+                            </div>
+                        </div>
+                        <div class="l-bottom-body-5">
                             <h4>A室</h4>
                             <div class="item1">
                                 <h5>已测订单数：<span></span></h5>
@@ -678,7 +729,6 @@
             $(this).css("color","#64ccff").find(".icon").css("background-image","url(${contextPath!}/static/img/labMain/home.png)")
         }).click(function () {
             $(".labMain_cb_left:eq(0)").addClass("labMain_cb_left_show").siblings().removeClass("labMain_cb_left_show");
-
         })
         //合格率
         initThree();
