--- a/src/main/webapp/layout/left.html
+++ b/src/main/webapp/layout/left.html
@@ -117,7 +117,12 @@
                                     P4:小批验证 入厂/出厂 P5:年度型检 监督抽测"</h4>
 -->
                                 <div class="myChart"></div>
-                                <p><span>P1</span><span>P2</span><span>P3</span><span>P4</span><span>P5</span></p>
+                                <!--<p><span>P1</span><span>P2</span><span>P3</span><span>P4</span><span>P5</span></p>-->
+                                <div class="added"><span>P1：对比试验</span><span>P2：新品调试</span><span>P3：新品确认</span>
+                                    <br>
+                                    <span>P4：小批验证 入厂/出厂</span>
+                                    <br>
+                                    <span>P5：年度型检 监督抽测</span></div>
                             </div>
                         </div>
                     </div>
