字符云自适应

--- a/src/main/webapp/layout/ulab.html
+++ b/src/main/webapp/layout/ulab.html
@@ -29,9 +29,9 @@ ${layoutContent}
         var bodyFontSize = h / 595 * 100 + "%";
         bodyScale = h / 595;
         $("body").css("font-size", bodyFontSize);
-        console.log("屏幕高度：" + h + ", body字号：" + bodyFontSize)
+        console.log("→ → → → → → → → → → → → → → 屏幕高度：" + h + ", body字号：" + bodyFontSize)
     }
-    pageResize(); 
+ pageResize();
 </script>
 </html> 
   
