--- a/src/main/webapp/layout/left.html
+++ b/src/main/webapp/layout/left.html
@@ -33,7 +33,7 @@
                             <h3>覆盖产品</h3>
                             <h4 class="noBG"><strong>50+</strong>类家电产品</h4>
                             <div class="myChart">
-                                <iframe src="${contextPath!}/lab/wordCloud"></iframe>
+                                <iframe id="wordCloud" src="${contextPath!}/lab/wordCloud"></iframe>
                             </div>
                         </div>
                     </div>
