使中海博睿中实时监测的数据自动向左移动

--- a/src/main/webapp/layout/left.html
+++ b/src/main/webapp/layout/left.html
@@ -118,11 +118,11 @@
 -->
                                 <div class="myChart"></div>
                                 <!--<p><span>P1</span><span>P2</span><span>P3</span><span>P4</span><span>P5</span></p>-->
-                                <div class="added"><span>P1：对比试验</span><span>P2：新品调试</span><span>P3：新品确认</span>
+                                <div class="added"><span>a：对比试验</span>&emsp;<span>b：新品调试</span>
                                     <br>
-                                    <span>P4：小批验证 入厂/出厂</span>
+                                    <span>c：新品确认</span>&emsp;<span>d,e：小批验证 入厂/出厂</span>
                                     <br>
-                                    <span>P5：年度型检 监督抽测</span></div>
+                                    <span>f,g：年度型检 监督抽测</span></div>
                             </div>
                         </div>
                     </div>
