--- a/src/main/webapp/static/css/index_left.css
+++ b/src/main/webapp/static/css/index_left.css
@@ -304,6 +304,7 @@
 
 #l .flat-footer .legend{
     position: relative;
+    top:-11%;
     text-align: center;
     font-size:1.1em;
     margin: 0 auto;
@@ -558,7 +559,7 @@
     font-size: .8em;
 }
 #l .flat-left-bottom div.added{
-    margin: 1% 3% 1%;
+    padding-left: 8%;
 }
 #l .flat-left-bottom p span:nth-of-type(1){
     left:6.25%;
