--- a/src/main/webapp/static/css/labLine.css
+++ b/src/main/webapp/static/css/labLine.css
@@ -21,6 +21,28 @@
     position: relative;
     display: none;
 }
+.sheshi_right_top{
+	height: 6%;
+    width: 80%;
+}
+.sheshi_right_top ul{
+	width:100%;
+	height:100%;
+	vertical-align:middle;
+	padding-top:3%
+}
+.sheshi_right_top ul li{
+	display:inline-block;
+	width:33%;
+	font-size: 1.2em;
+	text-align:center;
+	color:white;
+}
+
+.sheshi_right_top ul li span{
+	color:#66ccff;
+}
+
 .shishi_right_show{
     display: block;
 }
@@ -90,7 +112,7 @@
 }
 .shishi_right .sheshi_right_left{
     width: 90%;
-    height: 100%;
+    height: 90%;
     float: left;
 }
 .shishi_right .sheshi_right_right{
