--- a/src/main/webapp/layout/centerLab.html
+++ b/src/main/webapp/layout/centerLab.html
@@ -591,7 +591,7 @@
             			<li>样品编号：<span>m0007m0007m0007m0007</span></li>
             			<li>产品型号：<span>m0007m0007m0007m0007</span></li>
             		</ul>
-            	</div>>
+            	</div>
                 <div class="sheshi_right_left">
                     <div id="main1"></div>
                     <div id="main2"></div>
