--- a/src/main/webapp/layout/centerLab.html
+++ b/src/main/webapp/layout/centerLab.html
@@ -16,7 +16,7 @@
 <div class="labMain_content" style="display: none">
 <!--<div class="labMain_content" >-->
     <div class="labMain_content_top">
-        <h1>中海博睿介绍</h1>
+        <h1>中海博睿数据中心</h1>
         <div class="labMain_ct_btn">
             <div class="icon"></div>
             <h3>返回总状态</h3>
