--- a/src/main/webapp/layout/right.html
+++ b/src/main/webapp/layout/right.html
@@ -19,7 +19,7 @@
             <ul class="lab_name">
                 <li class="lab_item">工厂实验室</li>
                 <li class="lab_item">模块商实验室</li>
-                <li class="lab_item">中心实验室</li>
+                <li class="lab_item">中海博睿</li>
                 <li class="lab_item">研发实验室</li>
             </ul>
         </div>
