--- a/src/main/webapp/layout/left.html
+++ b/src/main/webapp/layout/left.html
@@ -64,7 +64,7 @@
                     <div class="sphere-right-bottom">
                         <div class="chartBorder">
                             <h3>互联实验室</h3>
-                            <h4 class="noBG">互联实验室： <strong> 376 </strong></h4>
+                            <h4 class="noBG">互联实验室： <strong id="linked_status_num">  </strong></h4>
                             <ul class="header">
                                 <li>实验室名称</li>
                                 <li>所在地</li>
