大屏的总状态和地球页面的调整

--- a/src/main/webapp/layout/ulab.html
+++ b/src/main/webapp/layout/ulab.html
@@ -30,7 +30,9 @@ ${layoutContent}
         bodyScale = h / 595;
         $("body").css("font-size", bodyFontSize);
         console.log("→ → → → → → → → → → → → → → 屏幕高度：" + h + ", body字号：" + bodyFontSize)
-    }
+/*         $("#screen").css("width", h * 16 * 7 / (9 * 3))
+            .find(".hline1").css("top","33%");
+ */    }
  pageResize();
 </script>
 </html> 
