--- a/src/main/webapp/layout/centerLab.html
+++ b/src/main/webapp/layout/centerLab.html
@@ -548,8 +548,8 @@
                 <div class="sheshi_tab">视频监控</div>
                 <div class="sheshi_tab">曲线监控</div>
                 <div class="sheshi_tab_list">
-                    <ul>
-                        <li><span></span><a href="#">实验室1</a>
+                    <ul id="lab_unit_selected_center">
+                       <!--  <li><span></span><a href="#">实验室1</a>
                             <ul class="taiwei_hide">
                                 <li>台位A3</li>
                                 <li>台位A3</li>
@@ -580,16 +580,16 @@
                                 <li>台位A3</li>
                                 <li>台位A3</li>
                             </ul>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
             <div class="shishi_right shishi_right_show">
             	<div class='sheshi_right_top'>
             		<ul>
-            			<li>试验编号：<span>m0007m0007m0007</span></li>
-            			<li>样品编号：<span>m0007m0007m0007m0007</span></li>
-            			<li>产品型号：<span>m0007m0007m0007m0007</span></li>
+            			<li>试验编号：<span id="center_sybh_id"></span></li>
+            			<li>样品编号：<span id="center_ypbm_id"></span></li>
+            			<li>产品型号：<span id="center_cpxh_id"></span></li>
             		</ul>
             	</div>
                 <div class="sheshi_right_left">
