tab1底下改切换列表为下拉选框

--- a/src/main/webapp/layout/left.html
+++ b/src/main/webapp/layout/left.html
@@ -1,7 +1,7 @@
      <div id="l">
         <header>
             <span class="mainLogo"></span>
-            <h1>海尔全球实验室数据中心</h1>
+            <h1>全球实验室数据中心</h1>
             <h1>Haier U-lab Data Center</h1>
         </header>
         <div class="btnGroup">
